# SpaceHaJi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.h
Inc/: main.h
src/: main.cpp
src/game/: CMakeLists.txt  GameManager.cpp  GameManager.h
src/game/effect/: CMakeLists.txt  Explosion.cpp  Explosion.h  GameEffect.cpp  GameEffect.h  HappyHaji.cpp  HappyHaji.h
src/game/hud/: CMakeLists.txt  HudManager.cpp  HudManager.h  HudState.h
src/game/object/: BkScroller.cpp  BkScroller.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Enemy.cpp  Enemy.h  Fighter.cpp  Fighter.h  GameObject.cpp  GameObject.h  Item.cpp  Item.h  Shield.cpp  Shield.h  Thruster.cpp  Thruster.h
src/game/scene/: CMakeLists.txt  EndScene.cpp  EndScene.h  MainScene.cpp  MainScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  TitleScene.cpp  TitleScene.h
