set(
    EFFECT_SRC
    GameEffect.cpp
    Explosion.cpp
)

add_library(
    effect
    ${EFFECT_SRC}
)
target_include_directories(
    effect
    PUBLIC
    ${CMAKE_SOURCE_DIR}/src/game
    ${CMAKE_CURRENT_SOURCE_DIR}
)
target_link_libraries(
    effect
    PUBLIC
    SDL2::SDL2
    SDL2_image::SDL2_image
    SDL2_mixer::SDL2_mixer
)
