set(
    HUD_SRC
    HudManager.cpp
)

add_library(
    hud
    ${HUD_SRC}
)
target_include_directories(
    hud
    PUBLIC
    ${CMAKE_SOURCE_DIR}/src/game
    ${CMAKE_CURRENT_SOURCE_DIR}
)
target_link_libraries(
    hud
    PUBLIC
    SDL2::SDL2
    SDL2_image::SDL2_image
    SDL2_ttf::SDL2_ttf
)
