set(
    OBJECT_SRC
    GameObject.cpp
    Fighter.cpp
    Enemy.cpp
    Bullet.cpp
    Item.cpp
    BkScroller.cpp
    Shield.cpp
    Thruster.cpp
)

add_library(
    object
    ${OBJECT_SRC}
)
target_include_directories(
    object
    PUBLIC
    ${CMAKE_SOURCE_DIR}/src/game
    ${CMAKE_CURRENT_SOURCE_DIR}
)
target_link_libraries(
    object
    PUBLIC
    effect
    SDL2::SDL2
    SDL2_image::SDL2_image
)
