set(
    SCENE_SRC
    MainScene.cpp
    TitleScene.cpp
    EndScene.cpp
)
add_library(
    scene 
    ${SCENE_SRC}
)
target_include_directories(
    scene
    PUBLIC 
    ${CMAKE_SOURCE_DIR}/Inc
    ${CMAKE_SOURCE_DIR}/src/game
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(
    scene
    PUBLIC
    object
    SDL2_image::SDL2_image
)
