set(
    SCENE_SRC
    Scene.cpp
    MainScene.cpp
    TitleScene.cpp
    EndScene.cpp
)
add_library(
    scene 
    ${SCENE_SRC}
)
target_include_directories(
    scene
    PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(
    scene
    PUBLIC
    object
    effect
    hud
    SDL2::SDL2
    SDL2_image::SDL2_image
    SDL2_ttf::SDL2_ttf
)
